# dynamic-call

./: Cargo.toml  LICENSE-MIT  README.md
dynamic_call/: Cargo.toml
dynamic_call/src/: derive_helpers.rs  lib.rs  proc_macro_helpers.rs
dynamic_call_derive/: Cargo.toml
dynamic_call_derive/src/: lib.rs
dynamic_call_proc_macro/: Cargo.toml
dynamic_call_proc_macro/src/: lib.rs
example/: Cargo.toml
example/src/: main.rs
