[package]
name = "dynamic_call"
version = "0.1.1"
edition = "2021"
readme = "../README.md"

license.workspace = true
description.workspace = true
repository.workspace = true

[dependencies]
serde = "1.0"
serde_json = "1.0"
dynamic_call_proc_macro = { path = "../dynamic_call_proc_macro", version = "0.1.0" }
